# ezeauto-rearch-automation-claude

./: .gitignore  CLAUDE.md  CheckScript.py  DriverScript.py  For_selectivie_validation.patch  SKILL.md  pytest.ini  requirement.txt  requirements.txt
Configuration/: Configuration.py  ExecutionDirectories.conf  TestSuiteSetup.py  config.ini  execution_log_config.yaml  testsuite_teardown.py
DataProvider/: .~lock.TestCasesDetail.xlsx#  GlobalConstants.py  config.py  (+11 more)
Utilities/charge_slip_validator/: LICENSE  MANIFEST.in  README.md  case_file.py  logo_validation.py  notes.md  pyproject.toml  receipt_validator.py  requirements.txt  setup.py  test.py  update_logo.py
Utilities/charge_slip_validator/charge_slip_validator/: __init__.py
Utilities/charge_slip_validator/charge_slip_validator/assets/: configuration.yaml
Utilities/charge_slip_validator/charge_slip_validator/assets/media/logos/ideal_references/: AIRP.json  AXIS.json  HDFC.json  ICICI.json  IDFC.json  KOTAK.json  YES.json  ezetap.json  fiserv.ezetap.json
Utilities/charge_slip_validator/charge_slip_validator/config/: __init__.py  path.py  utilities.py
Utilities/charge_slip_validator/charge_slip_validator/core/: __init__.py  logo_detector.py  screenshot_processor.py
Utilities/charge_slip_validator/charge_slip_validator/cv_tools/: __init__.py  template_detection.py
Utilities/charge_slip_validator/charge_slip_validator/errors/: __init__.py  opencv.py
Utilities/charge_slip_validator/notes/: doubts.yml  requirements_for_ezeauto_to_work.yml
Utilities/charge_slip_validator/scripts/: logo_reference_creator.py
(+2073 files in other folders)
